--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Oded", "oded's"]
+  "cSpell.words": [
+    "Oded",
+    "oded's",
+    "Ramat",
+    "Shenkar",
+    "topnav"
+  ]
 }
