--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.words": [
+    "Fromchenko",
+    "Herzelia",
     "Oded",
     "oded's",
     "Ramat",
+    "Screenprint",
     "Shenkar",
-    "topnav"
+    "topnav",
+    "Yehuda"
   ]
 }
