--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,14 @@
   "cSpell.words": [
     "Fromchenko",
     "Herzelia",
+    "Juklooks",
     "Oded",
     "oded's",
     "Ramat",
     "Screenprint",
     "Shenkar",
     "topnav",
-    "Yehuda"
+    "Yehuda",
+    "Ynet"
   ]
 }
