--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,22 @@
 {
   "cSpell.words": [
+    "Abergel",
+    "Ahad",
+    "Eran",
+    "Etti",
     "Fromchenko",
     "Herzelia",
+    "Ishai",
     "Juklooks",
+    "Kalter",
+    "Naama",
     "Oded",
     "oded's",
     "Ramat",
     "Screenprint",
+    "Shapira",
     "Shenkar",
+    "specifiartc",
     "topnav",
     "Yehuda",
     "Ynet"
