--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "Ahad",
     "Eran",
     "Etti",
+    "footerindex",
     "Fromchenko",
     "Herzelia",
     "Ishai",
@@ -12,11 +13,13 @@
     "Naama",
     "Oded",
     "oded's",
+    "Qalandiya",
     "Ramat",
     "Screenprint",
     "Shapira",
     "Shenkar",
     "specifiartc",
+    "tabindex",
     "topnav",
     "Yehuda",
     "Ynet"
