--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "netlify-cli": "^8.15.5"
+    "netlify-cli": "^8.15.5",
+    "sass": "^1.49.7"
   }
 }
